Added Linked-epitope analysis

--- a/analysis/neoantigen_pvactools.ipynb
+++ b/analysis/neoantigen_pvactools.ipynb
@@ -2,14 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "from scipy.stats import hypergeom"
    ]
   },
   {
@@ -18,57 +20,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = [pd.read_table('pvac/BTN-034.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-035.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-039.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-040.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-041.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-042.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-043.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-044.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-046.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-047.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-048.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-049.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-050.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-051.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-052.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-053.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-054.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-055.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-056.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-057.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-058.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-059.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-060.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-061.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-062.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-063.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-064.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-065.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-066.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-068.filtered.condensed.ranked.tsv', header=0),\n",
-    "      #pd.read_table('pvac/BTN-069.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-070.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-071.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-073.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-074.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-075.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-076.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-077.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-078.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-079.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-080.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-081.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-082.filtered.condensed.ranked.tsv', header=0),\n",
-    "      #pd.read_table('pvac/BTN-083.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-084.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-085.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-086.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-088.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-089.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-091.filtered.condensed.ranked.tsv', header=0),\n",
-    "      pd.read_table('pvac/BTN-092.filtered.condensed.ranked.tsv', header=0)]"
+    "df = []\n",
+    "# Note: Pvactools was not able to complete analysis of samples 69 and 83.\n",
+    "samples = [34,35,39,\n",
+    "           40,41,42,43,44,46,47,48,49,\n",
+    "           50,51,52,53,54,55,56,57,58,59,\n",
+    "           60,61,62,63,64,65,66,68,\n",
+    "           70,71,73,74,75,76,77,78,79,\n",
+    "           80,81,82,84,85,86,88,89,\n",
+    "           91,92]\n",
+    "for sample in samples:\n",
+    "    filename = '/home/harald/projects/somatic/test_samples/pvac/BTN-0{}.filtered.condensed.ranked.tsv'.format(sample)\n",
+    "    df.append(pd.read_table(filename, header=0))\n",
+    "for i in range(len(df)):\n",
+    "    df[i]['gene_pos'] = df[i]['Gene Name'] + '_' + df[i]['Protein Position']"
    ]
   },
   {
@@ -132,12 +97,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(len(df)):\n",
-    "    df[i]['gene_pos'] = df[i]['Gene Name'] + '_' + df[i]['Protein Position']"
+    "# Calculate Linked epitopes for epitopes appearing 10 or more times among the samples\n",
+    "l = []\n",
+    "for d in df:\n",
+    "    l += list(d['gene_pos'])\n",
+    "all_genepos = set(l)\n",
+    "geneposdb = {}\n",
+    "for genepos in all_genepos:\n",
+    "    geneposdb[genepos] = l.count(genepos)\n",
+    "linkdb = defaultdict(int)\n",
+    "with open('gene-pos_link-frequency.txt', 'w') as fout:\n",
+    "    fout.write('Epitope1\\tEpitope2\\tFrequency1\\tFrequency2\\tLinkFrequency\\tp-value\\n')\n",
+    "    for i,d in enumerate(df):\n",
+    "        geneposlist = list(d['gene_pos'])\n",
+    "        for i1, genepos1 in enumerate(geneposlist[:-1]):\n",
+    "            if geneposdb[genepos1] < 10:\n",
+    "                continue\n",
+    "            for i2, genepos2 in enumerate(geneposlist[i1+1:]):\n",
+    "                if geneposdb[genepos2] < 10:\n",
+    "                    continue\n",
+    "                a,b = sorted([genepos1,genepos2])\n",
+    "                linkdb[a,b] += 1\n",
+    "    for genepos1,genepos2 in linkdb:\n",
+    "        M = len(df)\n",
+    "        k = linkdb[genepos1,genepos2]\n",
+    "        n = geneposdb[genepos1]\n",
+    "        N = geneposdb[genepos2]\n",
+    "        pval = hypergeom.sf(k-1, M, n, N)\n",
+    "        fout.write('{}\\t{}\\t{}\\t{}\\t{}\\t{}\\n'.format(genepos1,genepos2,n,N,k,pval))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.21513605442176817 0.21513605442176817\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 26\n",
+    "M = 49\n",
+    "n = 47\n",
+    "N = 26\n",
+    "pval = hypergeom.sf(x-1, M, n, N)\n",
+    "pval1 = hypergeom.pmf(x,M,n,N)\n",
+    "print(pval, pval1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.276367 0.507817 0.215816 \n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "M = list(np.arange(1,50))\n",
+    "n = 47\n",
+    "N = 26\n",
+    "mc = [0]*(min(n,N)+1)\n",
+    "for _ in range(1000000):\n",
+    "    e1 = set(random.sample(M,n))\n",
+    "    e2 = set(random.sample(M,N))\n",
+    "    e12 = e1.intersection(e2)\n",
+    "    mc[len(e12)] += 1\n",
+    "for a in mc:\n",
+    "    print(a/sum(mc), end=' ')\n",
+    "print()"
    ]
   },
   {
@@ -146,6 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Print a simple report for each sample with the gene-pos and the number of times that gene-pos occur in total.\n",
     "l = []\n",
     "for d in df:\n",
     "    l += list(d['gene_pos'])\n",
@@ -155,7 +199,7 @@
     "    geneposdb[genepos] = l.count(genepos)\n",
     "with open('gene-pos_frequency.txt', 'w') as fout, open('gene-pos_frequency_transposed.txt','w') as fout2:\n",
     "    for i,d in enumerate(df):\n",
-    "        fout.write('---------------------------------\\n')\n",
+    "        fout.write('#S{}\\n'.format(samples[i]))\n",
     "        fout2.write('S{}'.format(i))\n",
     "        for ind, row in d.iterrows():\n",
     "            fout.write('{}\\t{}\\n'.format(row['gene_pos'], geneposdb[row['gene_pos']]))\n",
