--- a/analysis/neoantigen_pvactools_statistics.ipynb
+++ b/analysis/neoantigen_pvactools_statistics.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "infile = 'pvac/sample_report.filtered.tsv'\n",
+    "infile = '/home/harald/projects/somatic/test_samples/pvac/sample_report.filtered.tsv'\n",
     "df = pd.read_table(infile, header=0)\n",
     "df.columns"
    ]
